Fix gunicorn module import error for Render deployment
- Removed stray gunicorn command from wsgi.py
- Updated Procfile with explicit binding and worker configuration
- Updated render.yaml with explicit gunicorn parameters
- Fixed: ModuleNotFoundError: No module named 'app'

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     buildCommand: pip install -r requirements.txt && python manage.py migrate && python manage.py collectstatic --noinput
-    startCommand: gunicorn myproject.wsgi:application
+    startCommand: gunicorn myproject.wsgi:application --bind 0.0.0.0:$PORT --workers 2 --timeout 120
     healthCheckPath: /
     envVars:
       - key: DEBUG
